Fix: Adjust orb position for even coverage on mobile

--- a/src/App.css
+++ b/src/App.css
@@ -207,7 +207,7 @@ body {
     width: 150vw;
     height: 150vw;
     top: 0;
-    left: 0;
+    left: -10%;
     right: 0;
     margin: 0 auto;
     transform: translateY(20vh);
